--- a/app/src/main/res/layout/entry_item_view.xml
+++ b/app/src/main/res/layout/entry_item_view.xml
@@ -3,16 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp">
+    android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#DAD8D8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/entryViewEntryText" />
 
     <TextView
         android:id="@+id/entryViewEntryText"
-        android:layout_width="401dp"
-        android:layout_height="78dp"
+        android:layout_width="396dp"
+        android:layout_height="23dp"
         android:layout_marginTop="16dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,13 +37,13 @@
     <Button
         android:id="@+id/likebutton"
         style="@style/Widget.Material3.Button.IconButton"
-        android:layout_width="24dp"
-        android:layout_height="18dp"
+        android:layout_width="26dp"
+        android:layout_height="28dp"
         android:layout_marginStart="16dp"
         android:text="Button"
         app:icon="@android:drawable/btn_star_big_on"
         app:iconGravity="textStart"
-        app:iconTint="#E61332"
+        app:iconTint="#B5A2A4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/entryViewEntryText"
