--- a/app/src/main/res/layout/fragment_title_detail.xml
+++ b/app/src/main/res/layout/fragment_title_detail.xml
@@ -14,6 +14,7 @@
         android:layout_width="382dp"
         android:layout_height="53dp"
         android:layout_marginTop="16dp"
+        android:background="#FFFFFF"
         android:text="TextView"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,9 +26,41 @@
         android:id="@+id/entryRv"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/addEntryText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleTitleText"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/titleTitleText">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <EditText
+        android:id="@+id/addEntryText"
+        android:layout_width="341dp"
+        android:layout_height="68dp"
+        android:layout_marginBottom="16dp"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="sen ne düşünüyorsun?"
+        android:inputType="textMultiLine"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/sendEntryButton"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/sendEntryButton"
+        style="@style/Widget.Material3.Button.IconButton"
+        android:layout_width="47dp"
+        android:layout_height="52dp"
+        android:text="Button"
+        app:icon="@android:drawable/ic_media_play"
+        app:iconGravity="textEnd"
+        app:iconPadding="0dp"
+        app:iconSize="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/addEntryText"
+        app:layout_constraintTop_toTopOf="@+id/addEntryText" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
